--- a/androidmanifest.xml
+++ b/androidmanifest.xml
@@ -29,7 +29,7 @@ This file is part of BASIC! for Android
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.rfo.compiler"
-    android:versionCode="1936"
+    android:versionCode="1940"
     android:versionName="01.92" >
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -37,7 +37,7 @@ This file is part of BASIC! for Android
     <uses-permission android:name="android.permission.READ_PHONE_STATE" android:required="false"></uses-permission>
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
 
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="28" />
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="29" />
 
     <supports-screens android:xlargeScreens="true" />
 
@@ -47,6 +47,8 @@ This file is part of BASIC! for Android
         android:fullBackupContent="@xml/backup_rules"
         android:hardwareAccelerated="true"
         android:largeHeap="true"
+        android:requestLegacyExternalStorage="true"
+        android:extractNativeLibs="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         <receiver
