--- a/assets/rfo-compiler/data/Basic-01.92/AndroidManifest.xml
+++ b/assets/rfo-compiler/data/Basic-01.92/AndroidManifest.xml
@@ -27,14 +27,15 @@ This file is part of BASIC! for Android
 **********************************************************************************
 -->
 
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.rfo.basic"
-    android:versionCode="1920"
+    package="com.rfo.Basic"
+    android:versionCode="1922"
     android:versionName="1.92"
     android:installLocation="auto"
     tools:ignore="UnusedAttribute"> <!-- installLocation not available in API 7 -->
+
+
 
 
     <uses-feature android:name="android.hardware.telephony" android:required="false" />
@@ -48,22 +49,24 @@ This file is part of BASIC! for Android
     <uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
     <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
-    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="28" />
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="29" />
 
     <supports-screens android:xlargeScreens="true" />
 
-    <application android:largeHeap="false"
-        android:usesCleartextTraffic="true"
+    <application
+        android:largeHeap="false"
         android:hardwareAccelerated="true"
         android:allowBackup="true"
+        android:requestLegacyExternalStorage="true"
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
-
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <receiver
             android:name=".BootUpReceiver"
             android:enabled="false" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
+
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </receiver>
@@ -184,9 +187,8 @@ This file is part of BASIC! for Android
             android:name=".Web"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
             android:label="@string/web_view_name"
-            android:theme="@android:style/Theme.DeviceDefault.Light.NoActionBar.Fullscreen">
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen" >
         </activity>
-            <!--android:theme="@android:style/Theme.NoTitleBar.Fullscreen"-->
 
         <activity
             android:id="@+id/camera_screen"
@@ -218,8 +220,6 @@ This file is part of BASIC! for Android
         </activity>
 
         <uses-library android:name="com.sec.android.app.multiwindow" android:required="false" />
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
-
         <meta-data android:name="com.sec.android.support.multiwindow" android:value="true" />
         <meta-data android:name="com.sec.android.multiwindow.DEFAULT_SIZE_W" android:value="632.0dip" />
         <meta-data android:name="com.sec.android.multiwindow.DEFAULT_SIZE_H" android:value="598.0dip" />
